# readwise_telegram_bot

./: .flake8  .gitignore  app.py  pyproject.toml  readwise.py
