[tool.poetry]
name = "readwise-telegram-bot"
version = "0.1.0"
description = ""
authors = [
    "ILIA KHADZHIEV <ilya.khadzhiev@gmail.com>",
    "Muggle <indexes.mouths-0r@icloud.com>",
]
readme = "README.md"
packages = [{ include = "readwise_telegram_bot" }]

[tool.poetry.dependencies]
python = ">=3.8.1"
python-dotenv = "^0.21.1"
python-telegram-bot = {extras = ["socks"], version = "^20.0"}


[tool.poetry.group.dev.dependencies]
bandit = "^1.7.4"
flake8 = "^6.0.0"
black = { version = "^23.1a1", allow-prereleases = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py38"]
line-length = 120

[tool.isort]
profile = "black"
atomic = true


[tool.bandit]
recursive = true
# B108: Probable insecure usage of temp file/directory.
# B602: Subprocess call with shell=True identified, security issue.
# B404: Consider possible security implications associated with the subprocess module.
# B603: Subprocess call - check for execution of untrusted input.
# B607: Starting a process with a partial executable path.
skips = ["B108", "B602", "B404", "B603", "B607"]
assert_used.skips = ['tests/test_*.py']
